--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -22,7 +22,7 @@
             <div class="profile">
               <img src="C:\Users\HAI\Downloads\oooo.plus_111.png" alt="">
               <h2>Hello.</h2>
-              <p>I'm a web Developer. I love coffee and brew my own beers.</p>
+              <p>I'm a web Developer. I love developing.</p>
             </div>
             <hr>
             <div class="skills">
